--- a/Demo/TestProject/ANT/build.xml
+++ b/Demo/TestProject/ANT/build.xml
@@ -1,6 +1,6 @@
 <project default="runtests">
 	<property environment="env"/>
-	<property name="provar.home" value="/Users/ravindrayadav/Documents/MacBuild/30/Provar.app/Contents/Eclipse/"/>
+	<property name="provar.home" value="${env.PROVAR_HOME}"/>
 	<property name="testproject.home" value=".."/>
 	<property name="testproject.results" value="../ANT/Results"/>
 	
