--- a/Demo/TestProject/ANT/build.xml
+++ b/Demo/TestProject/ANT/build.xml
@@ -17,7 +17,7 @@
 				resultsPath="${testproject.results}" 
 				resultsPathDisposition="Increment" 
 				testEnvironment="" 
-				webBrowser="PhantomJS" 
+				webBrowser="Chrome" 
 				webBrowserConfiguration="Full Screen" 
 				excludeCallableTestCases="true" 
 				salesforceMetadataCache="Reuse" 
