--- a/Demo/TestProject/ANT/build.xml
+++ b/Demo/TestProject/ANT/build.xml
@@ -1,6 +1,6 @@
 <project default="runtests">
 	<property environment="env"/>
-	<property name="provar.home" value="${env.PROVAR_HOME}"/>
+	<property name="provar.home" value="/Applications/Provar.app/Contents/Eclipse/"/>
 	<property name="testproject.home" value=".."/>
 	<property name="testproject.results" value="../ANT/Results"/>
 	
@@ -27,7 +27,7 @@
 				invokeTestRunMonitor="true"
 				>
 		
-			<fileset dir="../tests"><include name="Demo.testcase"/></fileset>
+			<fileset dir="../tests/Others"><include name="Demo.testcase"/></fileset><fileset dir="../tests/Scenario"></fileset>
 
 			<emailProperties sendEmail="true" primaryRecipients="ravindra.yadav@provartesting.com" ccRecipients="" bccRecipients="" emailSubject="Provar test run report" attachExecutionReport="true" attachZip="false"/>
 			<attachmentProperties includeOnlyFailures="false" includeTestCaseDescription="true" includeScreenshots="true" includeWarningMessages="false" includeInfoMessages="true" includeDebugMessages="false" includeTestStepTime="false"/>
