--- a/Demo/TestProject/ANT/build.xml
+++ b/Demo/TestProject/ANT/build.xml
@@ -15,7 +15,7 @@
 		<Run-Test-Case provarHome="${provar.home}" 
 				projectPath="${testproject.home}" 
 				resultsPath="${testproject.results}" 
-				resultsPathDisposition="Increment" 
+				resultsPathDisposition="Replace" 
 				testEnvironment="" 
 				webBrowser="Chrome" 
 				webBrowserConfiguration="Full Screen" 
@@ -24,13 +24,14 @@
 				projectCachePath="../../.provarCaches" 
 				testOutputlevel="WARNING" 
 				pluginOutputlevel="WARNING"
+				stopTestRunOnError="false"
 				invokeTestRunMonitor="true"
 				>
 		
-			<fileset dir="../tests/Others"><include name="Demo.testcase"/></fileset><fileset dir="../tests/Scenario"></fileset>
+			<fileset dir="../tests/Others"><include name="Demo.testcase"/></fileset>
 
 			<emailProperties sendEmail="true" primaryRecipients="ravindra.yadav@provartesting.com" ccRecipients="" bccRecipients="" emailSubject="Provar test run report" attachExecutionReport="true" attachZip="false"/>
-			<attachmentProperties includeOnlyFailures="false" includeTestCaseDescription="true" includeScreenshots="true" includeWarningMessages="false" includeInfoMessages="true" includeDebugMessages="false" includeTestStepTime="false"/>
+			<attachmentProperties includeOnlyFailures="false" includeOnlyBdd="false" includeSkipped="false" includeTestCaseDescription="true" includeScreenshots="true" includeWarningMessages="false" includeInfoMessages="true" includeDebugMessages="false" includeTestStepTime="false" includeTestStepPathHierarchy="true" includeFullScreenShot="false"/>
 		</Run-Test-Case>
 
 	</target>
